# muwafak_portfolio

./: API_REFERENCE.md  ARCHITECTURE.md  BACKEND.md  BUILD_SUMMARY.md  COMPLETION_REPORT.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION.md  FILES_CREATED.txt  QUICKSTART.md  vercel.json
backend/: auth.py  database.py  init_db.py  main.py  pyproject.toml  requirements.txt  schemas.py  seed_skills.py
backend/routes/: auth.py  contact.py  portfolio.py  upload.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/public/: site.webmanifest
frontend/src/: App.jsx  index.css
frontend/src/admin/: AdminApp.jsx  Dashboard.jsx  Login.jsx
frontend/src/admin/sections/: AboutManager.jsx  ContactManager.jsx  EducationManager.jsx  ExperienceManager.jsx  ProfileManager.jsx  ProjectsManager.jsx  SkillsManager.jsx  TechStackManager.jsx
frontend/src/assets/favicon/: site.webmanifest
frontend/src/components/: About.jsx  Contact.jsx  Footer.jsx  Hero.jsx  Modal.jsx  Navbar.jsx  NotFound.jsx  Projects.jsx  Skills.jsx
frontend/src/context/: PortfolioContext.jsx
frontend/src/services/: api.js
