[project]
name = "portfolio-backend"
version = "0.1.0"
description = "FastAPI backend for Muwafak's Portfolio"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.136.1",
    "uvicorn==0.46.0",
    "starlette>=0.40.0,<0.48.0",

    "email-validator==2.3.0",
    "python-multipart==0.0.27",
    "httpx==0.28.1",

    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",

    "psycopg==3.3.4",
    "psycopg-binary==3.3.4",

    "python-jose==3.5.0",
    "passlib==1.7.4",
    "bcrypt==5.0.0",

    "python-dotenv==1.2.2",

    "anyio==4.13.0",
    "cryptography==48.0.0",
    "dnspython==2.8.0",
    "watchfiles==1.1.1",
    "websockets==16.0"
]
